# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
page_analyzer/: app.py  db.py  page_checker.py  url.py  utils.py
page_analyzer/templates/: base.html  index.html  page.html  pages.html
